# G5-SmartSort

./: .gitignore  .gitmodules  README.md  URDF_file.xml  frames_2024-11-16_04.41.20.gv
Arduino and depth camera/: Arduino arm controller joystick.ino  Arduino arm controller keyboard.ino  depth_camera.py  depth_camera_better_res.py
arduinobot_vision/: package.xml  setup.cfg  setup.py
arduinobot_vision/arduinobot_vision/scripts/: realsense_node.py
arduinobot_vision/launch/: camera.launch.py
install/: local_setup.sh  setup.sh
install/arduinobot_controller/share/arduinobot_controller/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/arduinobot_controller/share/arduinobot_controller/cmake/: arduinobot_controllerConfig-version.cmake  arduinobot_controllerConfig.cmake
install/arduinobot_controller/share/arduinobot_controller/config/: arduinobot_controllers.yaml  bridge_parameter.yaml
install/arduinobot_controller/share/arduinobot_controller/environment/: ament_prefix_path.dsv  path.dsv
install/arduinobot_controller/share/arduinobot_controller/launch/: controller.launch.py
install/arduinobot_cpp_examples/lib/arduinobot_cpp_examples/: simple_action_server_node  simple_moveit_interface  simple_parameter  simple_publisher  simple_service_client  simple_service_server  simple_subscriber
install/arduinobot_cpp_examples/share/arduinobot_cpp_examples/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.dsv  package.ps1  package.sh  package.xml
install/arduinobot_cpp_examples/share/arduinobot_cpp_examples/cmake/: arduinobot_cpp_examplesConfig-version.cmake  arduinobot_cpp_examplesConfig.cmake
install/arduinobot_cpp_examples/share/arduinobot_cpp_examples/environment/: ament_prefix_path.dsv  path.dsv
install/arduinobot_description/share/arduinobot_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  model.config  package.sh  package.xml
install/arduinobot_description/share/arduinobot_description/cmake/: arduinobot_descriptionConfig-version.cmake  (+1 more)
install/arduinobot_firmware/lib/arduinobot_firmware/: serial_transmitter
install/arduinobot_firmware/share/arduinobot_firmware/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/arduinobot_moveit/share/arduinobot_moveit/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/arduinobot_msgs/share/arduinobot_msgs/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/arduinobot_remote/share/arduinobot_remote/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/arduinobot_remote/share/arduinobot_remote/cmake/: arduinobot_remoteConfig-version.cmake  arduinobot_remoteConfig.cmake
install/arduinobot_remote/share/arduinobot_remote/environment/: ament_prefix_path.dsv  path.dsv
install/arduinobot_utils/lib/arduinobot_utils/: angle_conversion
install/arduinobot_utils/share/arduinobot_utils/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
log/: latest_build
src/arduinobot_bringup/: CMakeLists.txt  package.xml
src/arduinobot_bringup/launch/: physical_robot.launch.py  simulated_robot.launch.py
src/arduinobot_controller/: CMakeLists.txt  arduinobot_controller.xml  arduinobot_interface.cpp
src/arduinobot_controller/config/: arduinobot_controllers.yaml  bridge_parameter.yaml
src/arduinobot_controller/include/arduinobot_controller/: arduinobot_interface.hpp
src/arduinobot_controller/launch/: controller.launch.py
src/arduinobot_controller/src/: arduinobot_interface.cpp
src/arduinobot_cpp/: CMakeLists.txt  package.xml
src/arduinobot_cpp/src/: action_client.cpp  action_server.cpp  moveit_interface.cpp  subscriber.cpp
src/arduinobot_cpp_exsamples/: CMakeLists.txt
src/arduinobot_cpp_exsamples/src/: simple_action_client.cpp  simple_action_server.cpp  simple_parameter.cpp  simple_publisher.cpp  simple_service_client.cpp  simple_service_server.cpp
src/arduinobot_description/: CMakeLists.txt
src/arduinobot_description/config/: test.rviz
src/arduinobot_description/launch/: gazebo.launch.py  robot_state_publisher.launch.py  test_mesh.launch.py
src/arduinobot_description/meshes/: arm_1.dae  arm_2.dae  arm_3.dae  basement_1.dae  gripper_1.dae  gripper_2.dae  gripper_3.dae
src/arduinobot_description/rviz/: display_1.rviz
src/arduinobot_description/urdf/: arduinobot_gazebo.xacro  arduinobot_system.xacro  base_and_base_plate.xacro  grippers.xacro  test.urdf.xacro
src/arduinobot_firmware/: CMakeLists.txt  README.md
src/arduinobot_firmware/arduino/servo_control/: servo_control.ino
src/arduinobot_firmware/firmware/robot_control/robot_control/: robot_control.ino
src/arduinobot_firmware/firmware/robot_control/serial_receiver/: serial_receiver.ino
src/arduinobot_firmware/firmware/robot_control/serial_transmiter/: serial_transmiter.ino
src/arduinobot_firmware/firmware/robot_control/servo_control/: servo_control.ino
src/arduinobot_firmware/firmware/serial_receiver/: serial_receiver
src/arduinobot_firmware/src/: serial_receiver.cpp  serial_transmitter.cpp
src/arduinobot_moveit/: CMakeLists.txt
src/arduinobot_moveit/config/: arduinobot.srdf  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ompl_planning.yaml  pilz_cartesian_limits.yaml  pilz_planning.yaml  planning.yaml
src/arduinobot_moveit/launch/: moveit.launch.py
src/arduinobot_msgs/: CMakeLists.txt  package.xml
src/arduinobot_msgs/action/: Fibonacci.action
src/arduinobot_remote/: CMakeLists.txt  setup.py
src/arduinobot_remote/arduinobot_remote/: alexa_interface.py
src/arduinobot_remote/launch/: alexa_interface.launch.py
src/arduinobot_remote/scripts/: alexa_interface
src/arduinobot_remote/src/: task_server.cpp
src/arduinobot_utils/: CMakeLists.txt  package.xml
src/arduinobot_utils/src/: angle_conversion.cpp  lifecycle_node.cpp
(+166 files in other folders)
